changed filter view

--- a/src/components/organisms/Filter/Filter.scss
+++ b/src/components/organisms/Filter/Filter.scss
@@ -11,7 +11,7 @@
   &__box {
     display: flex;
     align-items: center;
-    @include b('mobile') {
+    @include b('tablet') {
       flex-wrap: wrap;
     }
   }
@@ -28,7 +28,7 @@
 
     & + & {
       margin-left: 10px;
-      @include b('mobile') {
+      @include b('tablet') {
         margin-left: 0;
       }
     }
@@ -38,12 +38,12 @@
       background: $purple;
     }
 
-    @include b('mobile') {
+    @include b('tablet') {
       margin: 0 10px 5px 0;
     }
   }
 
-  @include b('mobile') {
+  @include b('tablet') {
     padding-right: 0;
   }
 }
