--- a/src/components/organisms/Explore/Explore.scss
+++ b/src/components/organisms/Explore/Explore.scss
@@ -3,7 +3,7 @@
 .explore {
   &__title {
     margin-bottom: 30px;
-    @include b('mobile') {
+    @include b('tablet') {
       margin-bottom: 17px;
     }
   }
@@ -12,7 +12,7 @@
     margin-top: 30px;
   }
 
-  @include b('mobile') {
+  @include b('tablet') {
     .filter {
       position: relative;
 
