--- a/src/components/molecules/NFTCard/NFTCard.scss
+++ b/src/components/molecules/NFTCard/NFTCard.scss
@@ -1,4 +1,4 @@
-@import "src/styles/mixins/media";
+@import 'src/styles/mixins/media';
 
 .nft-card {
   width: 320px;
@@ -23,6 +23,7 @@
     & + & {
       margin-top: 0;
       padding-top: 15px;
+      margin-bottom: 0;
 
       border-top: 1px dashed rgba(0, 0, 0, 0.1);
     }
