changed swiper navigation position, removed mock hotBids

--- a/src/styles/components/_swiper.scss
+++ b/src/styles/components/_swiper.scss
@@ -37,15 +37,13 @@
     }
 
     @include b('mobile') {
-      top: -50px;
 
       &-next {
         right: 0;
       }
 
       &-prev {
-        right: 56px;
-        left: auto;
+        left: 0;
       }
     }
   }
