--- a/src/components/organisms/UserPopover/UserPopover.scss
+++ b/src/components/organisms/UserPopover/UserPopover.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/vars';
+@import 'src/styles/mixins/media';
 
 .u-popover {
   display: flex;
@@ -18,11 +19,11 @@
       margin-bottom: 20px;
 
       display: flex;
-      align-items: flex-end;
+      align-items: center;
     }
 
     & &-img {
-      margin-left: 35px;
+      margin: 10px auto;
       padding: 7px 10px;
 
       display: flex;
@@ -87,6 +88,7 @@
       &-wrapper {
         display: flex;
         align-items: center;
+        white-space: nowrap;
       }
     }
   }
