--- a/src/pages/Create/Create.scss
+++ b/src/pages/Create/Create.scss
@@ -4,6 +4,9 @@
 .create {
   padding: 60px 0;
 
+  @include b('tablet'){
+    padding: 30px 0 39px;
+  }
   &__content {
     margin: 0 auto;
 
@@ -42,6 +45,7 @@
     margin-bottom: 75px;
     @include b('mobile') {
       margin-left: 28px;
+      margin-bottom: 31px;
     }
   }
 }
