--- a/src/components/molecules/PageCover/PageCover.scss
+++ b/src/components/molecules/PageCover/PageCover.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/mixins/media';
+
 .cover {
   position: relative;
 
@@ -9,13 +11,14 @@
     position: absolute !important;
     right: 50px;
     bottom: -17px;
-
-    /*
+    z-index: 1;
 
     @include b('mobile') {
-      top: -180px;
-      right: 0;
+      right: 20px;
     }
-    */
+  }
+
+  @include b('mobile') {
+    height: 30vw;
   }
 }
