added paddings to mobile tabs

--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -3,6 +3,9 @@
 .user {
   @include b('mobile') {
     .ant-tabs {
+      .ant-tabs-nav{
+        padding: 0 10px;
+      }
       .ant-tabs-extra-content {
         display: none;
       }
