--- a/src/components/molecules/PageOverview/PageOverview.scss
+++ b/src/components/molecules/PageOverview/PageOverview.scss
@@ -107,14 +107,18 @@
 
       display: flex;
       flex-direction: row;
+      gap: 20px;
 
       .btn {
-        margin-right: 20px;
         &:nth-child(2) {
           span {
             margin-left: 10px;
           }
         }
+      }
+      @include b('mobile'){
+        flex-wrap: wrap;
+        justify-content: center;
       }
     }
 
