--- a/src/components/molecules/FollowCard/FollowCard.scss
+++ b/src/components/molecules/FollowCard/FollowCard.scss
@@ -6,15 +6,17 @@
   display: flex;
 
   border-bottom: 1px solid rgb(230, 230, 230);
-
+  a{
+    display: flex;
+  }
   &__avatar {
-    width: 100%;
-    max-width: 92px;
-    height: 100%;
+    width: 92px;
+    height: 92px;
 
     border-radius: 50%;
     @include b('mobile') {
-      max-width: 48px;
+      width: 48px;
+      height: 48px;
     }
   }
 
@@ -36,6 +38,7 @@
       padding: 8px 20px !important;
 
       @include b('mobile') {
+        margin-top: 0;
         margin-left: auto;
       }
     }
