paddings for olya

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,7 +45,12 @@ main {
   padding: 0 10px;
 
   max-width: 1360px;
-
+  @include b('desktop') {
+    padding: 0 40px;
+  }
+  @include b('tablet') {
+    padding: 0 10px;
+  }
 }
 
 a {
