--- a/src/components/organisms/UserPreview/UserPreview.scss
+++ b/src/components/organisms/UserPreview/UserPreview.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
 
-  min-width: max-content;
+  max-width: max-content;
 
   border: 1px solid $purple;
   border-radius: 16px;
