--- a/src/components/molecules/ActivityCard/ActivityCard.scss
+++ b/src/components/molecules/ActivityCard/ActivityCard.scss
@@ -38,7 +38,13 @@
       display: flex;
       flex-direction: column;
     }
+    &__title{
+      max-width: 168px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
 
+    }
     &__cost {
       margin-top: 25px;
       padding: 8px 12px;
