--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -3,23 +3,46 @@
 .user {
   @include b('desktop') {
     .ant-tabs {
-      .ant-tabs-nav{
+      .ant-tabs-nav {
         padding: 0 20px;
       }
     }
   }
   @include b('tablet') {
     .ant-tabs {
-      .ant-tabs-nav{
+      .ant-tabs-nav {
         padding: 0 15px;
       }
     }
   }
   @include b('mobile') {
     .ant-tabs {
-      .ant-tabs-nav{
+      .ant-tabs-nav {
         padding: 0 10px;
       }
+    }
+  }
+  &-login {
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &__title {
+      font-size: 20px;
+      line-height: 24px;
+    }
+
+    &__description {
+      margin-top: 21px;
+
+      text-align: center;
+    }
+    &__connect-btn {
+      margin-top: 50px;
     }
   }
 }
