--- a/src/components/organisms/BurgerMenu/BurgerMenu.scss
+++ b/src/components/organisms/BurgerMenu/BurgerMenu.scss
@@ -71,10 +71,17 @@
           align-self: center;
         }
         .u-popover {
+          margin-top: 10px;
           align-items: center;
           -webkit-transition: all 0.5s ease;
           -moz-transition: all 0.5s ease;
           transition: all 0.5s ease;
+          &__swap {
+            margin-top: 15px;
+            .btn {
+              margin: 0 auto;
+            }
+          }
         }
       }
     }
@@ -92,43 +99,8 @@
         }
       }
     }
-
-    .footer {
-      margin-top: auto;
-
-      &__nav {
-        margin-top: 0;
-      }
-
-      &__btns {
-        display: flex;
-        justify-content: center;
-
-        width: 100%;
-
-        .btn-link {
-          width: 100%;
-          max-width: 165px;
-        }
-
-        .btn {
-          width: 100%;
-          max-width: 165px;
-        }
-      }
-
-      .flex-center {
-        justify-content: center;
-      }
-
-      &__box-bottom {
-        margin-top: 41px;
-      }
-
-      &__social {
-        margin-left: auto;
-        margin-right: auto;
-      }
+    &__btns {
+      margin: 40px auto;
     }
   }
 }
