--- a/src/components/organisms/Footer/Footer.scss
+++ b/src/components/organisms/Footer/Footer.scss
@@ -2,12 +2,14 @@
 @import 'src/styles/mixins/media';
 
 .footer {
+  margin-top: 100px;
   padding: 71px 0 25px;
 
   background: #fafafa;
   position: relative;
 
   @include b('tablet') {
+    margin-top: 40px;
     padding: 40px 0 20px;
   }
 
