--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -70,9 +70,9 @@
   }
 
   &__explore {
-    padding: 100px 0;
+    padding-top: 100px;
     @include b('mobile') {
-      padding: 30px 0;
+      padding-top: 30px;
     }
   }
 }
