--- a/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
+++ b/src/components/molecules/HotCollectionCard/HotCollectionCard.scss
@@ -24,7 +24,7 @@
 
       border-radius: 12px;
 
-      img {
+      img,video {
         width: 100%;
         height: 100%;
         object-fit: contain;
